[package]
name = "esp8266-blink"
version = "0.1.0"
authors = ["Spar"]
edition = "2021"

[dependencies]
xtensa-lx-rt = "0.7.0"
xtensa-lx = "0.4.0"
panic-halt = "0.2.0"

esp8266-hal = { version = "0.5.0", optional = true }

# [[example]]
# name = "esp8266"
# required-features = ["xtensa-lx-rt/lx106", "xtensa-lx/lx106", "esp8266-hal"]
